Upgrade from Java 16 to Java 1.8